<resources>
    <string name="app_name">Tally Note</string>
    <string name="privacy_policy_01">You agree to our Terms and Privacy Policy and the laws of Bangladesh (so many) for using these apps or services. Thank you for using our products and services (Services). By using our Services, you are agreeing to these terms. Please read them carefully.</string>
    <string name="privacy_policy_02">(A) Our services are very diverse, so sometimes additional terms or product requirements (including age requirements) may apply. The Additional Terms will be available with the relevant Services, and if you use those Services, those Additional Terms become part of your agreement with us. Using our service You must follow any policies available to you within the Service. Do not abuse our services. For example, do not interfere with our services or try to access any interface or interface using the instructions we provide. You may use our Services only as permitted by law, including applicable export and re-export control laws and regulations. If you do not comply with our terms or policies or if we are investigating suspected misconduct, we may suspend or discontinue our supply of our services. Using our services does not give you any intellectual property rights in our services or the ownership of any content you access. You may not use the Content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. Do not remove, obscure, or alter any legal notices displayed on or alongside our Services. Our Services display content that is not tally. This content is the sole responsibility of the entity that makes it available. While we may review content that violates our policies or not, and we may remove or reject content that violates our policies or laws, it does not mean that we review the content, so please do not assume that we do. Access to or use of this service is said to constitute a new service or to refrain from offering a new service. This means that you must refrain from using any copyrights of this service or otherwise you may have to go to court if it has been proven. It is not said that you did it but rather it was said as if you did not do it. You bear sole responsibility for the use of these apps. You bear any compensation for any loss or damage of any anti-country activities or interest of any person under these apps. We may transmit service announcements, administrative messages and other information, such as access to information, information or any data or information that a person may have stolen or misbehaved with, or solely related to your use of the Services. You can get out of those few contacts.</string>
    <string name="privacy_policy_03">(B) Some of our services are available on mobile devices. Do not use these national services in a way that interrupts you and prevents you from obeying traffic or safety laws. You have to carry With access to your mobile apps, you bear the responsibility of compensating or compensating someone or any other person or proprietorship or any government or non-governmental organization, or any other responsibility or compensation, or the cost of going to court or going to court. Carries out the responsibility of the security policy itself. If you lose or forget your password or PIN or name, etc., tally.com.bd is not responsible or liable for any compensation. Take full responsibility for the apps themselves. Even if the service data seems to be lost or information is not available, you cannot take any of these problems yourself. The company is not obliged to answer any unanswered questions when it seems that information is lost, stolen, etc. These apps are wholly owned by the Apps authority. Yes, as a consumer, you may have an opinion that you can consider. None of your views on any of these developments or developments are acceptable. The Authority reserves the right, at any time, to develop or modify or modify it. The authority reserves the right to make any kind of intervention without prior notice. The Company may interfere directly with any matter that may result in the cancellation or termination of your registration. It is a service business of the authorities. The Company may at any time change the rules for business purposes. You do not have the ability to make any complaints. Our apps or sites consider the good results and the multiplication, it is your responsibility to avoid any wrong or bad aspects of you. Apps authority ie tally.com.bd allows you to use only the good aspects. Otherwise, the Authority will not allow you to use any such thing that has the potential to harm or harm you. Indicates that you abstain from illicit use or inconsistent behavior. Your use of apps may be allocated to indecent activities or anti-national activities or by someone or Joe. If you are using an account tally set by an administrator, different or additional terms may apply and your administrator may be able to access or disable your account. To protect your tally account, keep your password confidential. You are responsible for the activity that occurs on or through your Tally account. Try not to reuse your tally account password in third party applications. Follow these instructions if you learn your password or any authorized use of the account tally.</string>
    <string name="privacy_policy_04">(C) Privacy and Copyright Protection. Privacy Policy describes how we treat your personal data and protect your privacy when you use our Services. By using our Services you agree that tally may use such data in accordance with our Privacy Policy. The laws of the country in which you are based and the laws of Bangladesh may differ. But you follow the laws of that country. Tally does not violate or allow the laws of any other country. Allows you to upload, submit, store, transmit or receive content. You retain ownership of any intellectual property rights in that content. In short, you own what you own. When you upload, submit, store, transmit or receive content on or through our Services, you use Google (and the people we work with) to host, store, reproduce, modify, derivative Licensees to create works worldwide (such as from translation, adaptation or other modification of the results we make to your content You can work better with isebadigulira), communicate, publish, publicly perform, publicly display and distribute such content. The rights you grant in this license are for the limited purpose of operating, promoting and improving our Services and to develop new ones. This license continues even if you stop using our Services (for example, for a business listing associated with tally.com.bd). Some Services may provide you with a way to access and delete the Content provided on that Service. In addition, some of our Services have terms or settings that narrow our scope of use of the content submitted to those Services. Make sure we have the necessary rights to grant you this license for any content you submit to our Services. Our automated systems analyze your content (data base) to provide you with personalized relevant features, such as customized search results, created ads and spam and malware. Identification. This analysis occurs when sending, receiving, and storing the content.</string>
    <string name="privacy_policy_05">(D) About the Software in our Services When a service requires or includes downloadable software, this software may be automatically updated on your device when a new version or feature is available. Some services allow you to adjust your automatic update settings. Tally you as part of the service Tally gives you a personal, worldwide, royalty-free, non-assignable and non-exclusive license to use the software provided to you. This license is for the sole purpose of enabling you to use and enjoy the benefit of the Services provided by Google in the manner permitted by these Terms. You may not copy, modify, distribute, sell, or lease any part of our Services or the included software, nor may you attempt to extract the source code of this software, unless the laws prohibit those restrictions or you have our written permission.</string>
    <string name="privacy_policy_06">(E) about the modification and termination of our service We are constantly changing and improving our services. We may add or remove functionality or features and we may suspend or discontinue a Service. You can stop using our Services at any time, though we are sorry to see you go. Tally may prevent you from providing the Services or adding or creating new limits to our Services at any time. Liability for our Services Shall not be liable for loss, gains, earnings or data, financial loss or indirect, special, consequential, exemplary or punitive damages, if permitted by law and tally and tally\'s suppliers and distributors. We believe that you have your own data and it is important to preserve your access to this national data. If we discontinue a service, where reasonably possible, we will give you reasonable advance notice and the opportunity to extract information from that service. A personal, worldwide, royalty-free, non-exclusive way to use the software provided to you tally as part of the service. Gives employable and non-exclusive licenses. This license is for the sole purpose of enabling you to use and enjoy the benefit of the Services provided by Google in the manner permitted by these Terms. You may not copy, modify, distribute, sell, or lease any part of our Services or the included software, nor may you attempt to extract the source code of this software, unless the laws prohibit those restrictions or you have our written permission. Open source software is important to us. Some of the software used in our Services may be offered under an open source license that we will provide to you. The open source license may contain provisions that explicitly override some of these terms. Business use of our services If you use our services on behalf of a business, that business accepts these terms. That Tally will make any claim, liability or indemnity from the lawsuit, including any liability or expense arising from any claims, damages, damages arising out of or in connection with any claim, suit, or use of the Services or any breach of these Terms. Litigation, judgment, litigation costs and attorneys\' fees, etc.</string>
    <string name="detail">Detail</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="product">Product</string>
    <string name="no">No.</string>
    <string name="setting">Setting</string>
    <string name="log_out">log out</string>
    <string name="version">Version</string>
    <string name="_1_0a">1.1</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm Delete?</string>
    <string name="confirm">Confirm</string>
    <string name="pay_amount">Pay Amount</string>
    <string name="note_hint">Note</string>
    <string name="your_name">Your Name</string>
    <string name="paid">Paid</string>
    <string name="all">All</string>
    <string name="selected_language">English</string>
    <string name="language">Language</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_language">Change Language</string>
</resources>